fix subtitle career lightmode

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                       class="mb-1 text-4xl   dark:text-white career__timeline--position">Freelance
                       Web Developer</h3>
                     <h2
-                      class="mb-1 text-3xl  text-violet-600 dark:text-white career__timeline--site">Dental
+                      class="mb-1 text-3xl  text-violet-600 dark:text-violet-600 career__timeline--site">Dental
                       Clinic - Dr. Héctor González</h2>
                     <time
                       class="block mb-2 text-2xl  leading-none text-gray-400 dark:text-gray-500 career__timeline--date">June
@@ -261,7 +261,7 @@
                       class="mb-1 text-4xl  dark:text-white career__timeline--position">Full
                       Stack Web Developer (Course Project)</h3>
                     <h2
-                      class="mb-1 text-3xl   text-violet-600 dark:text-white career__timeline--site">BizExpo
+                      class="mb-1 text-3xl   text-violet-600 dark:text-violet-600 career__timeline--site">BizExpo
                       - Tech Event Platform</h2>
                     <time
                       class="block mb-2 text-2xl  leading-none text-gray-400 dark:text-gray-500 career__timeline--date">May
@@ -296,7 +296,7 @@
                       class="mb-1 text-4xl   dark:text-white career__timeline--position">Bilingual
                       Training and Quality Supervisor</h3>
                     <h2
-                      class="mb-1 text-3xl  text-violet-600 dark:text-white career__timeline--site">Concentrix</h2>
+                      class="mb-1 text-3xl  text-violet-600 dark:text-violet-600 career__timeline--site">Concentrix</h2>
                     <time
                       class="block mb-2 text-2xl  leading-none text-gray-400 dark:text-gray-500 career__timeline--date">August
                       2023 -June 2024</time>
@@ -329,7 +329,7 @@
                       class="mb-1 text-4xl   dark:text-white career__timeline--position">Bilingual
                       Quality Evaluator</h3>
                     <h2
-                      class="mb-1 text-3xl  text-violet-600 dark:text-white career__timeline--site">Concentrix</h2>
+                      class="mb-1 text-3xl  text-violet-600 dark:text-violet-600 career__timeline--site">Concentrix</h2>
                     <time
                       class="block mb-2 text-2xl  leading-none text-gray-400 dark:text-gray-500 career__timeline--date">June
                       2022 -August 2023</time>
@@ -361,7 +361,7 @@
                       class="mb-1 text-4xl   dark:text-white career__timeline--position">Bilingual
                       Customer Service Advisor</h3>
                     <h2
-                      class="mb-1 text-3xl  text-violet-600 dark:text-white career__timeline--site">Concentrix</h2>
+                      class="mb-1 text-3xl  text-violet-600 dark:text-violet-600 career__timeline--site">Concentrix</h2>
                     <time
                       class="block mb-2 text-2xl  leading-none text-gray-400 dark:text-gray-500 career__timeline--date">September
                       2022 -June 2022</time>
@@ -384,7 +384,7 @@
             <div
               id="accordion-flush"
               data-accordion="collapse"
-              data-active-classes="career__accordion--bgactive dark:bg-gray-900 text-cyan-300 dark:text-white"
+              data-active-classes="career__accordion--bgactive dark:bg-gray-200 text-cyan-300 dark:text-white"
               data-inactive-classes="text-gray-500 dark:text-gray-400">
               <h2 id="accordion-flush-heading-1">
                 <button
