change accordion bg

--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
             <div
               id="accordion-flush"
               data-accordion="collapse"
-              data-active-classes="career__accordion--bgactive dark:bg-gray-200 text-cyan-300 dark:text-white"
+              data-active-classes="career__accordion--bgactive dark:bg-transparent text-cyan-300 dark:text-white"
               data-inactive-classes="text-gray-500 dark:text-gray-400">
               <h2 id="accordion-flush-heading-1">
                 <button
