change accordion text dark color

--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
                       2024 - August 2024</p>
                   </div>
                   <p
-                    class="mb-2 text-zinc-300 dark:text-gray-400 career__drop--desc">Covers
+                    class="mb-2 text-zinc-300 dark:text-zinc-100 career__drop--desc">Covers
                     data
                     analytics fundamentals, including statistics, programming
                     (Python, R), Business Intelligence, SQL, and cloud
@@ -474,7 +474,7 @@
                       2024 - July 2024</p>
                   </div>
                   <p
-                    class="mb-2 text-zinc-300 dark:text-gray-400 career__drop--desc">Builds
+                    class="mb-2 text-zinc-300 dark:text-zinc-100 career__drop--desc">Builds
                     advanced web applications, dynamic admin areas, integrates
                     RESTful APIs, and optimizes design and performance.</p>
                   <!-- Modal toggle -->
@@ -524,7 +524,7 @@
                       2024 - June 2024</p>
                   </div>
                   <p
-                    class="mb-2 text-zinc-300 dark:text-gray-400 career__drop--desc">Strong
+                    class="mb-2 text-zinc-300 dark:text-zinc-100 career__drop--desc">Strong
                     foundation in software development, focusing on testing,
                     automation, and Git version control.</p>
                   <!-- Modal toggle -->
@@ -573,7 +573,7 @@
                       2019 - November 2023</p>
                   </div>
                   <p
-                    class="mb-2 text-zinc-300 dark:text-gray-400 career__drop--desc">Creates
+                    class="mb-2 text-zinc-300 dark:text-zinc-100 career__drop--desc">Creates
                     sustainable tech solutions, addresses environmental
                     challenges, and leads entrepreneurial projects with social
                     impact.</p>
