updated CV, experience, and projects up to june 25th

--- a/index.html
+++ b/index.html
@@ -224,6 +224,34 @@
                 <div class="career__timeline--information">
                   <div class="career__timeline--title">
                     <h3
+                      class="mb-1 text-4xl   dark:text-white career__timeline--position">BI Data Analyst</h3>
+                    <h2
+                      class="mb-1 text-3xl  text-violet-600 dark:text-violet-600 career__timeline--site">Multiempleos / Sky Friend (Official Distributor for OPPO Colombia)</h2>
+                    <time
+                      class="block mb-2 text-2xl  leading-none text-gray-400 dark:text-gray-500 career__timeline--date">January
+                      2025 -Present</time>
+                  </div>
+                  <div class="career__timeline--description">
+                    <p class="  text-cyan-50  career__timeline--text">Developed Power BI dashboards to track commercial expenses versus budget, enabling strategic decisions. Analyzed weekly sales data from major retail chains, generating reports on sales, inventory, and projections. Prepared brand performance comparisons by price, region, and channel. Automated commission calculations for sales teams, managing over COP $1,000M. Streamlined bonus delivery, reducing outstanding debt from COP $379M to COP $12M through improved control and follow-up.</p>
+                  </div>
+                </div>
+              </li>
+              <li class="ms-12 pb-24 ">
+                <span
+                  class="absolute flex items-center justify-center w-10 h-10 bg-blue-100 rounded-full -start-5   ">
+                  <svg
+                    class="w-5 h-5 text-cyan-600 dark:text-blue-300"
+                    aria-hidden="true"
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="currentColor"
+                    viewBox="0 0 20 20">
+                    <path
+                      d="M20 4a2 2 0 0 0-2-2h-2V1a1 1 0 0 0-2 0v1h-3V1a1 1 0 0 0-2 0v1H6V1a1 1 0 0 0-2 0v1H2a2 2 0 0 0-2 2v2h20V4ZM0 18a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V8H0v10Zm5-8h10a1 1 0 0 1 0 2H5a1 1 0 0 1 0-2Z" />
+                  </svg>
+                </span>
+                <div class="career__timeline--information">
+                  <div class="career__timeline--title">
+                    <h3
                       class="mb-1 text-4xl   dark:text-white career__timeline--position">Freelance
                       Web Developer</h3>
                     <h2
@@ -968,13 +996,15 @@
             class="projects__grid">
             <div class="book mix data__analysis">
               <div class="work__projectdesc--container">
-                <h1 class="work__projectdesc--title">Audit Overview</h1>
+                <h1 class="work__projectdesc--title">Market Dashboard </h1>
+                <h1 class="work__projectdesc--title">Food & Beverage Sector
+
+</h1>
                 <p class="work__projectdesc--text">
-                  Develop a dynamic Power BI dashboard to analyze audit tracker
-                  data, using Power
+                  Develop a dynamic Power BI dashboard to analyze food - Beverage Sector, using Power
                   Query to transform the data...
                 </p>
-                <a href="views/trackerdashboard.html"
+                <a href="views/marketfood.html"
                   class="work__projectdesc--link">Go to Project
                   <i class="ri-arrow-right-fill"></i>
                 </a>
@@ -984,28 +1014,28 @@
                   <div class="work__project--img-container">
                     <picture class="work__image">
                       <source
-                        srcset="public/build/img/trackerdashboard-img.avif"
+                        srcset="public/build/img/market-food-beverage.avif"
                         type="image/avif"
                         class="work__img"
                         alt="work image">
                       <source
-                        srcset="public/build/img/trackerdashboard-img.webp"
+                        srcset="public/build/img/market-food-beverage.webp"
                         type="image/webp"
                         class="work__img"
                         alt="work image">
                       <img
-                        src="public/build/img/trackerdashboard-img.png"
+                        src="public/build/img/market-food-beverage.png"
                         type="image/png"
                         class="work__img"
                         alt="work image"
                         loading="lazy">
                     </picture>
                   </div>
-                  <h1 class="work__project--title">Audit Overview</h1>
+                  <h1 class="work__project--title">Food & Beverage</h1>
                   <div class="work__project--techs">
                     <p class="work__project--tech">Power BI</p>
                     <p class="work__project--tech">Power Query</p>
-                    <p class="work__project--tech">Excel</p>
+                    <p class="work__project--tech">Power Point</p>
                   </div>
                 </div>
               </div>
